--- a/src/notebooks/check aromaticity.ipynb
+++ b/src/notebooks/check aromaticity.ipynb
@@ -2229,7 +2229,9 @@
    "cell_type": "code",
    "execution_count": 44,
    "id": "4cf7f902-83ae-49f2-9139-5c80cdfc75b0",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
