--- a/src/notebooks/check_training.ipynb
+++ b/src/notebooks/check_training.ipynb
@@ -51,14 +51,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "a8146300",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "use processed_HDBSCAN_non_filtered\n",
+      "use processed_HDBSCAN_non_filtered\n",
+      "use processed_HDBSCAN_non_filtered\n",
+      "use processed_HDBSCAN_non_filtered\n",
+      "use processed_HDBSCAN_non_filtered\n",
+      "use processed_HDBSCAN_non_filtered\n",
+      "use processed_HDBSCAN_non_filtered\n",
+      "use processed_HDBSCAN_non_filtered\n",
+      "use processed_HDBSCAN_non_filtered\n",
+      "use processed_HDBSCAN_non_filtered\n",
+      "use processed_HDBSCAN_non_filtered\n",
+      "use processed_HDBSCAN_non_filtered\n",
+      "use processed_HDBSCAN_non_filtered\n",
+      "use processed_HDBSCAN_non_filtered\n",
+      "use processed_HDBSCAN_non_filtered\n"
+     ]
+    }
+   ],
    "source": [
     "# dataset = CombinedGraphDataset(root='../../data/small_dataset', split='all')\n",
     "# dataset = CombinedSparseGraphDataset(root='../../data/small_dataset', split='all')\n",
+    "train_dataset = CombinedSparseGraphDataset(root='../../data/cleaned_crossdocked_data', split='train', aromatic=True, filtering=False)\n",
+    "val_dataset = CombinedSparseGraphDataset(root='../../data/cleaned_crossdocked_data', split='valid', aromatic=True, filtering=False)\n",
     "dataset = CombinedSparseGraphDataset(root='../../data/cleaned_crossdocked_data', split='test', aromatic=True, filtering=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "ece547fc-c3fc-4a5b-ac15-cb2f15b3aa75",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(197114, 19059, 15235)"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(train_dataset), len(val_dataset), len(dataset)"
    ]
   },
   {
