--- a/src/notebooks/evaluate_all.ipynb
+++ b/src/notebooks/evaluate_all.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "id": "d72c9a28-b279-4c90-b402-626213c3abf0",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 17,
    "id": "4019bb38-6689-4d44-bb79-048e89cb9d30",
    "metadata": {},
    "outputs": [],
@@ -24,12 +24,12 @@
     "root_path = '../lightning_logs/vp_bridge_egnn_CombinedSparseGraphDataset_2024-08-19_21_05_04.140916/ligand_based/selected'\n",
     "# root_path = '../lightning_logs/vp_bridge_egnn_CombinedSparseGraphDataset_2024-08-19_21_05_04.140916/selected'\n",
     "\n",
-    "aromatic = True"
+    "aromatic = False"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 4,
    "id": "53bbe32a-e1b6-44a6-9994-ea01fba83009",
    "metadata": {},
    "outputs": [
@@ -136,7 +136,7 @@
        "[450 rows x 2 columns]"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1625,17 +1625,457 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "a1a64954-b860-4a19-b010-8d3a0e7be5e8",
+   "metadata": {},
+   "source": [
+    "# Not gathering"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "c1855ef6-be69-413c-b289-4172cee1c428",
+   "execution_count": 18,
+   "id": "89a168e6-79f1-4ee5-a684-e5c9a6fcd9c6",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "ba_file = os.path.join(root_path, 'binding_affinity')\n",
+    "ba_file = ba_file + '_aromatic.csv' if aromatic else ba_file + '.csv'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "e86c4cd4-3283-4079-8c39-54fcb475c83a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Binding affinity</th>\n",
+       "      <th>CNN score</th>\n",
+       "      <th>Reference</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>5xin_A_rec_5xim_sor_lig_tt_docked_6</th>\n",
+       "      <td>-7.37</td>\n",
+       "      <td>0.9024</td>\n",
+       "      <td>-6.56085</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4gh0_A_rec_4h2z_mys_lig_tt_min_0</th>\n",
+       "      <td>-7.45</td>\n",
+       "      <td>0.8912</td>\n",
+       "      <td>-5.47220</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2evs_A_rec_4h2z_mys_lig_tt_min_0</th>\n",
+       "      <td>-9.53</td>\n",
+       "      <td>0.8840</td>\n",
+       "      <td>-8.05530</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5xin_A_rec_1xin_xyl_lig_tt_min_0</th>\n",
+       "      <td>-6.48</td>\n",
+       "      <td>0.8783</td>\n",
+       "      <td>-6.36995</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4m6u_B_rec_4fp1_bfm_lig_tt_docked_0</th>\n",
+       "      <td>-6.53</td>\n",
+       "      <td>0.8763</td>\n",
+       "      <td>-5.61502</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4k4j_A_rec_3r5m_mlo_lig_it1_tt_docked_0</th>\n",
+       "      <td>-7.30</td>\n",
+       "      <td>0.0926</td>\n",
+       "      <td>-1.61585</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5li7_B_rec_5li7_6xd_lig_tt_min_0</th>\n",
+       "      <td>-7.31</td>\n",
+       "      <td>0.0913</td>\n",
+       "      <td>-6.54616</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4xma_A_rec_4xjw_opx_lig_tt_min_0</th>\n",
+       "      <td>-6.62</td>\n",
+       "      <td>0.0900</td>\n",
+       "      <td>-6.26959</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2jkb_A_rec_4xjw_opx_lig_tt_min_0</th>\n",
+       "      <td>-6.53</td>\n",
+       "      <td>0.0773</td>\n",
+       "      <td>-6.32378</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4xjw_A_rec_4xjw_opx_lig_tt_min_0</th>\n",
+       "      <td>-6.62</td>\n",
+       "      <td>0.0590</td>\n",
+       "      <td>-6.23364</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1724 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                         Binding affinity  CNN score  \\\n",
+       "5xin_A_rec_5xim_sor_lig_tt_docked_6                 -7.37     0.9024   \n",
+       "4gh0_A_rec_4h2z_mys_lig_tt_min_0                    -7.45     0.8912   \n",
+       "2evs_A_rec_4h2z_mys_lig_tt_min_0                    -9.53     0.8840   \n",
+       "5xin_A_rec_1xin_xyl_lig_tt_min_0                    -6.48     0.8783   \n",
+       "4m6u_B_rec_4fp1_bfm_lig_tt_docked_0                 -6.53     0.8763   \n",
+       "...                                                   ...        ...   \n",
+       "4k4j_A_rec_3r5m_mlo_lig_it1_tt_docked_0             -7.30     0.0926   \n",
+       "5li7_B_rec_5li7_6xd_lig_tt_min_0                    -7.31     0.0913   \n",
+       "4xma_A_rec_4xjw_opx_lig_tt_min_0                    -6.62     0.0900   \n",
+       "2jkb_A_rec_4xjw_opx_lig_tt_min_0                    -6.53     0.0773   \n",
+       "4xjw_A_rec_4xjw_opx_lig_tt_min_0                    -6.62     0.0590   \n",
+       "\n",
+       "                                         Reference  \n",
+       "5xin_A_rec_5xim_sor_lig_tt_docked_6       -6.56085  \n",
+       "4gh0_A_rec_4h2z_mys_lig_tt_min_0          -5.47220  \n",
+       "2evs_A_rec_4h2z_mys_lig_tt_min_0          -8.05530  \n",
+       "5xin_A_rec_1xin_xyl_lig_tt_min_0          -6.36995  \n",
+       "4m6u_B_rec_4fp1_bfm_lig_tt_docked_0       -5.61502  \n",
+       "...                                            ...  \n",
+       "4k4j_A_rec_3r5m_mlo_lig_it1_tt_docked_0   -1.61585  \n",
+       "5li7_B_rec_5li7_6xd_lig_tt_min_0          -6.54616  \n",
+       "4xma_A_rec_4xjw_opx_lig_tt_min_0          -6.26959  \n",
+       "2jkb_A_rec_4xjw_opx_lig_tt_min_0          -6.32378  \n",
+       "4xjw_A_rec_4xjw_opx_lig_tt_min_0          -6.23364  \n",
+       "\n",
+       "[1724 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ba_df = pd.read_csv(ba_file, header=0, index_col=0)\n",
+    "ba_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "7d6a7389-f96e-4f26-8df8-f2837867028c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pp_score_file = os.path.join(root_path, '..', 'reconstructed_mols')\n",
+    "pp_score_file += '_aromatic_mode_scores.csv' if aromatic else '_scores.csv'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "b4da7a61-5f92-485a-9350-26742cb2b802",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>pp_score</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1yw8_A_rec_1yw8_a75_lig_tt_docked_2</th>\n",
+       "      <td>0.100000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4f31_B_rec_3lsw_4mp_lig_tt_min_0</th>\n",
+       "      <td>0.666667</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5i00_A_rec_5i00_afq_lig_tt_min_0</th>\n",
+       "      <td>0.428571</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5eob_A_rec_3zxz_krw_lig_tt_docked_0</th>\n",
+       "      <td>0.333333</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4ot2_A_rec_4zbr_nps_lig_tt_min_0</th>\n",
+       "      <td>0.666667</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4b84_A_rec_4b84_z5k_lig_tt_min_0</th>\n",
+       "      <td>0.600000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2re8_A_rec_1o0b_amp_lig_tt_min_0</th>\n",
+       "      <td>0.428571</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2bur_A_rec_1eob_dhb_lig_tt_min_0</th>\n",
+       "      <td>0.500000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5hx8_A_rec_4ivb_1j5_lig_tt_min_0</th>\n",
+       "      <td>0.833333</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3fzt_A_rec_4h1j_0yh_lig_tt_min_0</th>\n",
+       "      <td>0.375000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>14804 rows × 1 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                     pp_score\n",
+       "1yw8_A_rec_1yw8_a75_lig_tt_docked_2  0.100000\n",
+       "4f31_B_rec_3lsw_4mp_lig_tt_min_0     0.666667\n",
+       "5i00_A_rec_5i00_afq_lig_tt_min_0     0.428571\n",
+       "5eob_A_rec_3zxz_krw_lig_tt_docked_0  0.333333\n",
+       "4ot2_A_rec_4zbr_nps_lig_tt_min_0     0.666667\n",
+       "...                                       ...\n",
+       "4b84_A_rec_4b84_z5k_lig_tt_min_0     0.600000\n",
+       "2re8_A_rec_1o0b_amp_lig_tt_min_0     0.428571\n",
+       "2bur_A_rec_1eob_dhb_lig_tt_min_0     0.500000\n",
+       "5hx8_A_rec_4ivb_1j5_lig_tt_min_0     0.833333\n",
+       "3fzt_A_rec_4h1j_0yh_lig_tt_min_0     0.375000\n",
+       "\n",
+       "[14804 rows x 1 columns]"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pp_score_df = pd.read_csv(pp_score_file, header=0, index_col=0)\n",
+    "pp_score_df = pp_score_df.rename(columns = {'score': 'pp_score'})\n",
+    "pp_score_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "6edba9e2-7280-4155-b910-959c8919951c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Binding affinity</th>\n",
+       "      <th>CNN score</th>\n",
+       "      <th>Reference</th>\n",
+       "      <th>pp_score</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>5xin_A_rec_5xim_sor_lig_tt_docked_6</th>\n",
+       "      <td>-7.37</td>\n",
+       "      <td>0.9024</td>\n",
+       "      <td>-6.56085</td>\n",
+       "      <td>0.500000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4gh0_A_rec_4h2z_mys_lig_tt_min_0</th>\n",
+       "      <td>-7.45</td>\n",
+       "      <td>0.8912</td>\n",
+       "      <td>-5.47220</td>\n",
+       "      <td>0.866667</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2evs_A_rec_4h2z_mys_lig_tt_min_0</th>\n",
+       "      <td>-9.53</td>\n",
+       "      <td>0.8840</td>\n",
+       "      <td>-8.05530</td>\n",
+       "      <td>0.933333</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5xin_A_rec_1xin_xyl_lig_tt_min_0</th>\n",
+       "      <td>-6.48</td>\n",
+       "      <td>0.8783</td>\n",
+       "      <td>-6.36995</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4m6u_B_rec_4fp1_bfm_lig_tt_docked_0</th>\n",
+       "      <td>-6.53</td>\n",
+       "      <td>0.8763</td>\n",
+       "      <td>-5.61502</td>\n",
+       "      <td>0.875000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4k4j_A_rec_3r5m_mlo_lig_it1_tt_docked_0</th>\n",
+       "      <td>-7.30</td>\n",
+       "      <td>0.0926</td>\n",
+       "      <td>-1.61585</td>\n",
+       "      <td>0.600000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5li7_B_rec_5li7_6xd_lig_tt_min_0</th>\n",
+       "      <td>-7.31</td>\n",
+       "      <td>0.0913</td>\n",
+       "      <td>-6.54616</td>\n",
+       "      <td>0.571429</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4xma_A_rec_4xjw_opx_lig_tt_min_0</th>\n",
+       "      <td>-6.62</td>\n",
+       "      <td>0.0900</td>\n",
+       "      <td>-6.26959</td>\n",
+       "      <td>0.818182</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2jkb_A_rec_4xjw_opx_lig_tt_min_0</th>\n",
+       "      <td>-6.53</td>\n",
+       "      <td>0.0773</td>\n",
+       "      <td>-6.32378</td>\n",
+       "      <td>0.636364</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4xjw_A_rec_4xjw_opx_lig_tt_min_0</th>\n",
+       "      <td>-6.62</td>\n",
+       "      <td>0.0590</td>\n",
+       "      <td>-6.23364</td>\n",
+       "      <td>0.727273</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1724 rows × 4 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                         Binding affinity  CNN score  \\\n",
+       "5xin_A_rec_5xim_sor_lig_tt_docked_6                 -7.37     0.9024   \n",
+       "4gh0_A_rec_4h2z_mys_lig_tt_min_0                    -7.45     0.8912   \n",
+       "2evs_A_rec_4h2z_mys_lig_tt_min_0                    -9.53     0.8840   \n",
+       "5xin_A_rec_1xin_xyl_lig_tt_min_0                    -6.48     0.8783   \n",
+       "4m6u_B_rec_4fp1_bfm_lig_tt_docked_0                 -6.53     0.8763   \n",
+       "...                                                   ...        ...   \n",
+       "4k4j_A_rec_3r5m_mlo_lig_it1_tt_docked_0             -7.30     0.0926   \n",
+       "5li7_B_rec_5li7_6xd_lig_tt_min_0                    -7.31     0.0913   \n",
+       "4xma_A_rec_4xjw_opx_lig_tt_min_0                    -6.62     0.0900   \n",
+       "2jkb_A_rec_4xjw_opx_lig_tt_min_0                    -6.53     0.0773   \n",
+       "4xjw_A_rec_4xjw_opx_lig_tt_min_0                    -6.62     0.0590   \n",
+       "\n",
+       "                                         Reference  pp_score  \n",
+       "5xin_A_rec_5xim_sor_lig_tt_docked_6       -6.56085  0.500000  \n",
+       "4gh0_A_rec_4h2z_mys_lig_tt_min_0          -5.47220  0.866667  \n",
+       "2evs_A_rec_4h2z_mys_lig_tt_min_0          -8.05530  0.933333  \n",
+       "5xin_A_rec_1xin_xyl_lig_tt_min_0          -6.36995  1.000000  \n",
+       "4m6u_B_rec_4fp1_bfm_lig_tt_docked_0       -5.61502  0.875000  \n",
+       "...                                            ...       ...  \n",
+       "4k4j_A_rec_3r5m_mlo_lig_it1_tt_docked_0   -1.61585  0.600000  \n",
+       "5li7_B_rec_5li7_6xd_lig_tt_min_0          -6.54616  0.571429  \n",
+       "4xma_A_rec_4xjw_opx_lig_tt_min_0          -6.26959  0.818182  \n",
+       "2jkb_A_rec_4xjw_opx_lig_tt_min_0          -6.32378  0.636364  \n",
+       "4xjw_A_rec_4xjw_opx_lig_tt_min_0          -6.23364  0.727273  \n",
+       "\n",
+       "[1724 rows x 4 columns]"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "merged_df = ba_df.merge(pp_score_df, left_index=True, right_index=True)\n",
+    "merged_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "a4ec69b2-ceec-4aae-b793-79d783033ebe",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "merged_df.to_csv(os.path.join(root_path, 'merged_res_aromatic.csv' if aromatic else 'merged_res.csv'), index=True, header=True)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "89a168e6-79f1-4ee5-a684-e5c9a6fcd9c6",
+   "id": "c99af24d-5fc1-4f36-9113-0c7ee3eb9aee",
    "metadata": {},
    "outputs": [],
    "source": []
