--- a/src/notebooks/select_lig.ipynb
+++ b/src/notebooks/select_lig.ipynb
@@ -239,7 +239,9 @@
    "cell_type": "code",
    "execution_count": 11,
    "id": "8f077082-a6d3-4afb-b5a7-6fd796255bc8",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
